background color fix for display on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@ body,
 	padding: 0;
 	height: 100%;
 	width: 100%;
-	background-color: lightcoral;
 }
 
 .page {
